Springboot校园闲置物品交易平台

--- a/src/main/resources/templates/goods/detailGoods.html
+++ b/src/main/resources/templates/goods/detailGoods.html
@@ -70,7 +70,7 @@
                 <em class="em3">gk.market</em>
             </a>
             <div class="nav-wrapper search-bar">
-                <form ng-submit="search()" class="ng-pristine ng-invalid ng-invalid-required" action="<%=basePath%>goods/search">
+                <form ng-submit="search()" class="ng-pristine ng-invalid ng-invalid-required" action="/goods/search">
                     <div class="input-field">
                         <input id="search" name="str" placeholder="搜点什么吧..." style="height: 40px;"
                                class="ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required"/>
