--- a/src/main/resources/templates/user/goods.html
+++ b/src/main/resources/templates/user/goods.html
@@ -68,6 +68,13 @@
                             <strong></strong>
                         </li>
                     </a>
+                    <a href="/user/message">
+                        <li class="notice">
+                            <div></div>
+                            <span>消息中心</span>
+                            <strong></strong>
+                        </li>
+                    </a>
                     <a href="/goods/publishGoods">
                         <li class="store">
                             <div></div>
