--- a/src/main/resources/templates/user/purse.html
+++ b/src/main/resources/templates/user/purse.html
@@ -66,6 +66,13 @@
 								<div></div> <span>关注列表</span> <strong></strong>
 						</li>
 						</a>
+						<a href="/user/message">
+							<li class="notice">
+								<div></div>
+								<span>消息中心</span>
+								<strong></strong>
+							</li>
+						</a>
 						<a href="/goods/publishGoods">
 							<li class="store">
 								<div></div> <span>发布物品</span> <strong></strong>
