实现了登录与注册框实时显示返回错误提示和加入shiro安全框架未登录时对一些用户页面进行拦截

--- a/src/main/resources/templates/goods/detailGoods.html
+++ b/src/main/resources/templates/goods/detailGoods.html
@@ -39,6 +39,78 @@
                 $("#changeName").css("display","none");
             }
         }
+       $(document).ready(function() {
+           //异步验证
+           $("#phone").blur(function(){
+               var phone=$(this).val();
+               $.ajax({
+                   url:'/user/register',
+                   type:'POST',
+                   data:{phone:phone},
+                   dataType:'json',
+                   success:function(json){
+                       if(json.flag){
+                           $("#errorPhone").html("账号已被注册，请重新输入!");
+                           $("#register").attr("disabled",true);
+                       }else{
+                           $("#errorPhone").empty();
+                           $("#register").attr("disabled",false);
+                       }
+                   },
+                   error:function(){
+                       alert('请求超时或系统出错!');
+                   }
+               });
+
+           });
+
+           $("#login_password").focus(function () {
+               $("#loginIn").attr("disabled",false);
+               $("#login_errorPhone").html("");
+               $("#errorPassword").html("");
+           });
+           $("#login_phone").focus(function () {
+               $("#loginIn").attr("disabled",false);
+               $("#login_errorPhone").html("");
+               $("#errorPassword").html("");
+           });
+
+           $("#loginIn").focus(function () {
+
+               var phone = $("#login_phone").val();
+               var password = $("#login_password").val();
+               $.ajax({
+                   url: '/user/login',
+                   type: 'POST',
+                   data: {phone: phone, password: password},
+                   success: function (json) {
+                       /*if(json){
+                         if(json.flag){
+                              $("#errorPassword").html("请核对账号密码，再重新输入!");
+                              $("#loginIn").attr("disabled",true);
+                         }else{
+                              $("#errorPassword").empty();
+                              $("#loginIn").attr("disabled",false);
+                         }
+                     }else{*/
+                       if(json=="请检查您的密码是否输入正确"){
+                           $("#errorPassword").html("请检查您的密码是否输入正确!");
+                           $("#loginIn").attr("disabled",true);
+                       }if(json=="该用户不存在"){
+                           $("#login_errorPhone").html("您输入的在账号有误!");
+                           $("#loginIn").attr("disabled",true);
+                       }
+                       /*}*/
+                   },
+                   error:function(json){
+                       alert("系统出错啦")
+                   }
+               });
+           });
+
+
+       });
+
     </script>
     
     <script type="text/javascript">
@@ -152,17 +224,17 @@
                 <a onclick="showLogin()">
                     <div class="col s12 title"></div>
                 </a>
-                <form action="/user/login" method="post" commandName="user" role="form">
+                <form id="loginFrom" method="post" role="form">
                     <div class="input-field col s12">
-                        <input type="text" name="phone" required="required" pattern="^1[0-9]{10}$" class="validate ng-pristine ng-empty ng-invalid ng-invalid-required ng-valid-pattern ng-touched" />
-                        <label>手机</label>
+                        <input type="text" name="phone" id="login_phone" required="required" pattern="^1[0-9]{10}$" class="validate ng-pristine ng-empty ng-invalid ng-invalid-required ng-valid-pattern ng-touched" />
+                        <label>手机&nbsp;&nbsp;<div id="login_errorPhone" style="color:red;display:inline;"></div></label>
                     </div>
                     <div class="input-field col s12">
-                        <input type="password" name="password" required="required" class="validate ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required" />
-                        <label>密码</label>
-                        <!-- <a ng-click="showForget()" class="forget-btn">忘记密码？</a> -->
+                        <input type="password" id="login_password"  name="password" required="required" class="validate ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required" />
+                        <label>密码&nbsp;&nbsp;<div id="errorPassword" style="color:red;display:inline;"></div></label>
+                        <!--   <a ng-click="showForget()" class="forget-btn">忘记密码？</a> -->
                     </div>
-                    <button type="submit" class="waves-effect waves-light btn login-btn red lighten-1">
+                    <button type="submit" id="loginIn" class="waves-effect waves-light btn login-btn red lighten-1">
                         <i class="iconfont left"></i>
                         <em>登录</em>
                     </button>
@@ -187,21 +259,22 @@
                 <a onclick="showSignup()">
                     <div class="col s12 title"></div>
                 </a>
-                <form action="/user/addUser" method="post" commandName="user" role="form">
+                <form action="/user/addUser" method="POST" role="form" id="signup_form">
                     <div class="input-field col s12">
                         <input type="text" name="username" required="required" class="validate ng-pristine ng-empty ng-invalid ng-invalid-required ng-valid-pattern ng-touched" />
                         <label>昵称</label>
                     </div>
                     <div class="input-field col s12">
-                        <input type="text" name="phone" required="required" pattern="^1[0-9]{10}$" class="validate ng-pristine ng-empty ng-invalid ng-invalid-required ng-valid-pattern ng-touched" />
-                        <label>手机</label>
+                        <input type="text" name="phone" id="phone" required="required" pattern="^1[0-9]{10}$" class="validate ng-pristine ng-empty ng-invalid ng-invalid-required ng-valid-pattern ng-touched" />
+                        <label>手机&nbsp;&nbsp;<div id="errorPhone" style="color:red;display:inline;"></div></label>
+
                     </div>
                     <div class="input-field col s12">
                         <input type="password" name="password" required="required" class="validate ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required" />
                         <label>密码</label>
                     </div>
                     <div ng-show="checkTelIsShow" class="col s12">
-                        <button type="submit" class="waves-effect waves-light btn verify-btn red lighten-1">
+                        <button type="submit" id="register" class="waves-effect waves-light btn verify-btn red lighten-1">
                             <i class="iconfont left"></i>
                             <em>点击注册</em>
                         </button>
@@ -215,6 +288,7 @@
         </div>
     </div>
 </div>
+
 <!--更改用户名-->
 <div ng-controller="changeNameController" class="ng-scope">
     <div id="changeName" class="change-name stark-components">
