对管理员登录界面进行改进，保留原有界面为login2，管理员session有时异常null 暂未排除。

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -2,9 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 
-<meta charset="UTF-8" />
 	<title>后台管理</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8" />
 </head>
 <link rel="stylesheet" href="/static/css/bootstrap.min.css" />
 <link rel="stylesheet" href="/static/css/bootstrap-responsive.min.css" />
@@ -27,7 +26,7 @@
 		<!--breadcrumbs-->
 		<div id="content-header">
 			<div id="breadcrumb">
-				<a title="主页" class="tip-bottom" href="/admin/indexs"><i class="icon-home"></i>主页</a>
+				<a title="主页" class="tip-bottom" href="/admin/index"><i class="icon-home"></i>主页</a>
 			</div>
 		</div>
 		<!--End-breadcrumbs-->
