--- a/src/main/resources/templates/admin/info.html
+++ b/src/main/resources/templates/admin/info.html
@@ -27,7 +27,7 @@
 		<!--breadcrumbs-->
 		<div id="content-header">
 			<div id="breadcrumb">
-				<a href="/admin/indexs" title="主页" class="tip-bottom">
+				<a href="/admin/index" title="主页" class="tip-bottom">
 				<i class="icon-home"></i>主页</a> <a title="管理员个人信息" class="tip-bottom">管理员个人信息</a>
 			</div>
 		</div>
