--- a/src/main/resources/templates/admin/modify.html
+++ b/src/main/resources/templates/admin/modify.html
@@ -32,7 +32,7 @@
 		<!--breadcrumbs-->
 		<div id="content-header">
 			<div id="breadcrumb">
-				<a href="/admin/indexs" title="主页" class="tip-bottom"><i class="icon-home"></i>主页</a>
+				<a href="/admin/index" title="主页" class="tip-bottom"><i class="icon-home"></i>主页</a>
 				<a title="修改密码" class="tip-bottom">修改密码</a>
 			</div>
 		</div>
