--- a/src/main/resources/templates/admin/purse/purse_list.html
+++ b/src/main/resources/templates/admin/purse/purse_list.html
@@ -45,7 +45,7 @@ table td {
 		<!--breadcrumbs-->
 		<div id="content-header">
 			<div id="breadcrumb">
-				<a href="/admin/indexs" title="主页" class="tip-bottom"><i
+				<a href="/admin/index" title="主页" class="tip-bottom"><i
 					class="icon-home"></i>主页</a> <a title="充值列表" class="tip-bottom">充值钱包</a>
 			</div>
 		</div>
