--- a/src/main/resources/templates/admin/goods/goods_list.html
+++ b/src/main/resources/templates/admin/goods/goods_list.html
@@ -48,7 +48,7 @@ table td{
 		<!--breadcrumbs-->
 		<div id="content-header">
 			<div id="breadcrumb">
-				<a href="/admin/indexs" title="主页"
+				<a href="/admin/index" title="主页"
 					class="tip-bottom"><i class="icon-home"></i>主页</a> <a title="商品列表"
 					class="tip-bottom">商品列表</a>
 			</div>
