--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -1,72 +1,59 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-
+<!doctype html>
+<html  class="x-admin-sm">
 <head>
-<title>Admin Login</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="stylesheet" href="/static/css/bootstrap.min.css"/>
-<link rel="stylesheet" href="/static/css/matrix-login.css"/>
-<link rel="stylesheet" href="/static/css/bootstrap-responsive.min.css"/>
-<link rel="stylesheet" href="/static/font-awesome/css/font-awesome.css" />
-</head>
-<body>
-	<div id="loginbox">
-	<h1 style="text-align:center;">校园闲置物品交易平台管理系统</h1>
-		<form id="loginform" class="form-vertical" action="/admin/index" method="post" role="form">
-			<div class="control-group normal_text">
-			</div>
-			<div class="control-group">
-				<div class="controls">
-					<div class="main_input_box">
-						<span class="add-on bg_lg"><i class="icon-user"></i> </span> <input
-							type="text"  name="phone" id="phone"
-							class="required" value="" placeholder="账号" />
-					</div>
-				</div>
-			</div>
-			<div class="control-group">
-				<div class="controls">
-					<div class="main_input_box">
-						<span class="add-on bg_ly"><i class="icon-lock"></i> </span> <input
-							type="password" placeholder="密码" name="password"
-							id="password" />
-					</div>
-				</div>
-			</div>
-			<div class="form-actions">
-				<input type="submit" class="btn btn-success" value="Login" style="margin-left:80%">
-			</div>
-		</form>
-	</div>
-	<script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/matrix.login.js" type="text/javascript" charset="utf-8"></script>
-	<script src="/static/js/jquery.validate.js"></script>
-	<script src="/static/js/jquery.md5.js"></script>
-	<script type="text/javascript">
-    $("#loginform").validate({
-        rules: {
-        	phone: "required",
-            password: {
-                required: true,
-                minlength: 6
-            },
-        },
-        messages: {
-        	phone:  "请输入用户名",
-            password: {
-                required: "请输入密码",
-                minlength: jQuery.format("密码不能小于{0}个字符")
-            }
-        }
-    });
-    
-    function encrypt(){
-    	/// var pwd = $.md5($("#password").val());
-    	$("#password").val(pwd);
-    	return true;
-    };
-</script>
-</body>
+	<meta charset="UTF-8">
+	<title>后台登录-X-admin2.2</title>
+	<meta name="renderer" content="webkit|ie-comp|ie-stand">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
+    <meta http-equiv="Cache-Control" content="no-siteapp" />
+    <link rel="stylesheet" href="/static/css/font.css">
+    <link rel="stylesheet" href="/static/css/login.css">
+	  <link rel="stylesheet" href="/static/css/xadmin.css">
+    <script type="text/javascript" src="/static/js/jquery.min.js"></script>
 
+    <script src="/static/lib/layui/layui.js" charset="utf-8"></script>
+    <!--[if lt IE 9]>
+      <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
+      <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+<body class="login-bg">
+    
+    <div class="login layui-anim layui-anim-up">
+        <div class="message">校园闲置物品交易平台管理系统</div>
+        <div id="darkbannerwrap"></div>
+        
+        <form method="post" class="layui-form" action="/admin/sign" >
+            <input placeholder="用户名"  type="text" lay-verify="required" class="layui-input"  name="phone" id="phone">
+            <hr class="hr15">
+            <input name="password" lay-verify="required" placeholder="密码"  type="password" class="layui-input" id="password">
+            <hr class="hr15">
+            <input value="登录" lay-submit lay-filter="login" style="width:100%;" type="submit">
+            <hr class="hr20" >
+        </form>
+    </div>
+
+    <script>
+        $(function  () {
+            layui.use('form', function(){
+              var form = layui.form;
+              // layer.msg('玩命卖萌中', function(){
+              //   //关闭后的操作
+              //   });
+              //监听提交
+             /* form.on('submit(login)', function(data){
+                // alert(888)
+                layer.msg(JSON.stringify(data.field),function(){
+                    location.href='index.html'
+                });
+                return false;
+              });*/
+            });
+        })
+    </script>
+    <!-- 底部结束 -->
+
+
+</body>
 </html>
