--- a/src/main/resources/templates/admin/main_top.html
+++ b/src/main/resources/templates/admin/main_top.html
@@ -16,8 +16,10 @@
 
 	   	<div style="height:50px;background-color:#323232;">
 	   	<div style="float:left;background-color:#FFB53E;height:50px;width:220px;">
-	   	<a href="/admin/indexs">
+	   	<a href="/admin/index">
 	   	<p style="font-size:30px;text-align:center;">首页</p>
+
+
 	   	</a>
 	   	</div>
 	   	<h1 style=" text-align:center;margin-top: 10px;margin-bottom: 0px;">校园闲置物品交易平台管理系统</h1>
@@ -39,12 +41,12 @@
 					<li class="divider"></li>
 					<li><a href="/admin/modify"><i class="icon-check"></i>修改密码</a></li>
 					<li class="divider"></li>
-					<li><a href="/admin"
+					<li><a href="/admin/logout"
 						onclick="return confirm('确认退出吗？');"><i class="icon-key"></i>退出</a>
 					</li>
 				</ul>
 			</li>
-			<li class=""><a title="" href="/admin"
+			<li class=""><a title="" href="/admin/logout"
 				onclick="return confirm('确认退出吗？');"><i
 					class="icon icon-share-alt"></i> <span class="text">退出</span> </a></li>
 		</ul>
