--- a/src/main/resources/templates/admin/orders/orders_list.html
+++ b/src/main/resources/templates/admin/orders/orders_list.html
@@ -46,7 +46,7 @@ table td {
 		<!--breadcrumbs-->
 		<div id="content-header">
 			<div id="breadcrumb">
-				<a href="/admin/indexs" title="主页" class="tip-bottom"><i
+				<a href="/admin/index" title="主页" class="tip-bottom"><i
 					class="icon-home"></i>主页</a> <a title="订单列表" class="tip-bottom">订单列表</a>
 			</div>
 		</div>
